Fixed worst X calculation

--- a/Lab1/Lab1.ipynb
+++ b/Lab1/Lab1.ipynb
@@ -11,7 +11,7 @@
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import pylab\n",
-    "from numpy import loadtxt, corrcoef, delete, array, concatenate, vstack, ones\n",
+    "from numpy import loadtxt, corrcoef, delete, array, concatenate, vstack, ones, triu, where\n",
     "from numpy.linalg import lstsq\n",
     "pylab.rcParams['figure.figsize'] = (10.0, 10.0)"
    ]
@@ -19,6 +19,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "BIG_CORRELATION = 0.9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -31,19 +42,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "worst = abs(corrcoef(y, xs)[0][1:]).argmin()\n",
+    "worst_pairs = where(triu(abs(corrcoef(xs)), 1) > BIG_CORRELATION)\n",
+    "correlations = abs(corrcoef(y, xs))[0][1:]\n",
+    "worst = [i if correlations[i] < correlations[j] else j for i, j in zip(*worst_pairs)]\n",
     "xs = delete(xs, worst, axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
