Fixed best regressor calculation

--- a/Lab1/Lab1.ipynb
+++ b/Lab1/Lab1.ipynb
@@ -73,7 +73,7 @@
    },
    "outputs": [],
    "source": [
-    "best = abs(corrcoef(y, xs)[0][1:]).argmax()\n",
+    "best = abs(corrcoef(y, sequences)[0][1:]).argmax()\n",
     "x = sequences[best]"
    ]
   },
