Added Student test

--- a/Lab1/Lab1.ipynb
+++ b/Lab1/Lab1.ipynb
@@ -14,7 +14,7 @@
     "import pylab\n",
     "from numpy import loadtxt, corrcoef, delete, array, concatenate, vstack, ones, triu, where\n",
     "from numpy.linalg import lstsq\n",
-    "from scipy.stats import f"
+    "from scipy.stats import f, t"
    ]
   },
   {
@@ -191,6 +191,89 @@
     "plt.plot(all_regressors[1], a * all_regressors[0] + b * all_regressors[1], label='Fitted line')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.98143993882411418"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student = array([t.cdf(s, len(all_regressors[0]) - len(all_regressors)) for s in all_coefficients[-1] / (((array(all_regressors)**2)/(len(all_regressors)-1))**.5).sum(axis=1)])\n",
+    "student.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "residuum = get_residuum(y, all_regressors, all_coefficients[-1])\n",
+    "last_regressors = delete(all_regressors, student.argmax(), axis=0)\n",
+    "last_coefficients = lstsq(array(last_regressors).T, y)[0]\n",
+    "new_residuum = get_residuum(y, last_regressors, last_coefficients)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.88456252989831929"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array([t.cdf(s, len(last_regressors[0]) - len(last_regressors)) for s in last_coefficients / (((array(last_regressors)**2)/len(last_regressors))**.5).sum(axis=1)]).max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, -358.52274890345637, (76.131517013220332, 356.14434514207852))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S = (residuum**2).sum(), (new_residuum**2).sum()\n",
+    "F = (last_regressors.size - len(last_regressors)) * (S[0] - S[1]) / S[1]\n",
+    "f.cdf(F, 1, last_regressors[0].size - len(last_regressors) + 1), F, S"
    ]
   }
  ],
