--- a/course/Notebook/Coursework.ipynb
+++ b/course/Notebook/Coursework.ipynb
@@ -43,19 +43,22 @@
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "from numpy import loadtxt, arange"
+    "import pylab\n",
+    "pylab.rcParams['figure.figsize'] = (15.0, 15.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pylab\n",
-    "pylab.rcParams['figure.figsize'] = (15.0, 15.0)"
+    "from numpy import loadtxt, arange, log\n",
+    "from pandas.stats.moments import ewma\n",
+    "from pandas import rolling_mean, rolling_std, Series\n",
+    "from statsmodels.tsa.stattools import adfuller"
    ]
   },
   {
