Increased font size for plots

--- a/course/Notebook/Coursework.ipynb
+++ b/course/Notebook/Coursework.ipynb
@@ -55,6 +55,18 @@
    },
    "outputs": [],
    "source": [
+    "from matplotlib import rc\n",
+    "rc('font', size=18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "from numpy import loadtxt, arange, log, delete, array\n",
     "from scipy.stats import f\n",
     "from pandas.stats.moments import ewma"
