Displaying anomaly points info on F-test plots

--- a/course/Notebook/Coursework.ipynb
+++ b/course/Notebook/Coursework.ipynb
@@ -286,11 +286,13 @@
     "    f_test = get_f_weights(anomalies)\n",
     "    \n",
     "    plt.plot(time, f_test)\n",
-    "    plt.title('F-test tail weights')\n",
-    "    plt.xlabel('Anomaly point')\n",
-    "    plt.ylabel('Tail weight')\n",
+    "    plt.suptitle('F-test tail weights', fontweight='bold')\n",
+    "    if len(anomaly_points) > 0:\n",
+    "        plt.title('Anomalies are ' + ', '.join(['$%d$'%p for p in anomaly_points]))\n",
+    "    plt.xlabel('Anomaly point', fontsize=18)\n",
+    "    plt.ylabel('Tail weight', fontsize=18)\n",
     "    plt.show()\n",
-    "    return f_test.min()"
+    "    return f_test.min(), f_test.argmin()"
    ]
   },
   {
