Removed redundant font specification

--- a/course/Notebook/Coursework.ipynb
+++ b/course/Notebook/Coursework.ipynb
@@ -306,8 +306,8 @@
     "    plt.suptitle('F-test tail weights', fontweight='bold')\n",
     "    if len(anomaly_points) > 0:\n",
     "        plt.title('Removed anomalies ' + ', '.join(['$%d$'%p for p in anomaly_points]))\n",
-    "    plt.xlabel('Anomaly point', fontsize=18)\n",
-    "    plt.ylabel('Tail weight', fontsize=18)\n",
+    "    plt.xlabel('Anomaly point')\n",
+    "    plt.ylabel('Tail weight')\n",
     "    plt.show()\n",
     "    return f_test.min(), f_test.argmin()"
    ]
@@ -343,8 +343,8 @@
     "\n",
     "plt.plot(t, anomalies)\n",
     "plt.title('Variances ratios between series wihout anomaly points and original one')\n",
-    "plt.xlabel('Anomaly point', fontsize=18)\n",
-    "plt.ylabel('Variance', fontsize=18)\n",
+    "plt.xlabel('Anomaly point')\n",
+    "plt.ylabel('Variance')\n",
     "plt.show()"
    ]
   },
