Renamed smoothing function
Needed to avoid its internal actions description

--- a/course/Notebook/Coursework.ipynb
+++ b/course/Notebook/Coursework.ipynb
@@ -177,10 +177,10 @@
    },
    "outputs": [],
    "source": [
-    "def ewma_averaged(data, span):\n",
+    "def data_smoother(data, span):\n",
     "    smoothed = ewma(data, span=span)\n",
     "    errors = data - smoothed\n",
-    "    return smoothed + errors.mean()"
+    "    return smoothed# + errors.mean()"
    ]
   },
   {
@@ -203,7 +203,7 @@
    ],
    "source": [
     "span = 6\n",
-    "smoothed_y = ewma_averaged(y, span=span)\n",
+    "smoothed_y = data_smoother(y, span=span)\n",
     "\n",
     "plt.plot(t, y, label='Source')\n",
     "plt.plot(t, smoothed_y, label='Smoothed with $%d$'%span)\n",
@@ -255,7 +255,7 @@
    "source": [
     "def get_fixed_std(data_series, position, span):\n",
     "    data_series = delete(data_series, position)\n",
-    "    return (data_series - ewma_averaged(data_series, span=span)).std()"
+    "    return (data_series - data_smoother(data_series, span=span)).std()"
    ]
   },
   {
@@ -267,7 +267,7 @@
    "outputs": [],
    "source": [
     "def get_f_test_values(data_series, span):\n",
-    "    smoothed_series = ewma_averaged(data_series, span=span)\n",
+    "    smoothed_series = data_smoother(data_series, span=span)\n",
     "    anomalies_stds = [get_fixed_std(data_series, i, span) for i in range(data_series.size)]\n",
     "    anomalies = array([(data_series - smoothed_series).std() / std for std in anomalies_stds])**2\n",
     "    return anomalies"
@@ -463,7 +463,7 @@
     }
    ],
    "source": [
-    "smoothed_y_without_anomalies = ewma_averaged(y_without_anomalies, span=span)\n",
+    "smoothed_y_without_anomalies = data_smoother(y_without_anomalies, span=span)\n",
     "\n",
     "plt.plot(t_without_anomalies, y_without_anomalies, label='Source')\n",
     "plt.plot(t_without_anomalies, smoothed_y_without_anomalies, label='Smoothed with $%d$'%span)\n",
@@ -499,7 +499,7 @@
    "outputs": [],
    "source": [
     "def get_smoothing_errors_normality(data, span):\n",
-    "    return normaltest(data - ewma_averaged(data, span=span))"
+    "    return normaltest(data - data_smoother(data, span=span))"
    ]
   },
   {
@@ -546,7 +546,7 @@
     }
    ],
    "source": [
-    "smoothed_y_without_anomalies = ewma_averaged(y_without_anomalies, span=best_span)\n",
+    "smoothed_y_without_anomalies = data_smoother(y_without_anomalies, span=best_span)\n",
     "errors = y_without_anomalies - smoothed_y_without_anomalies\n",
     "\n",
     "plt.plot(t_without_anomalies, y_without_anomalies, label='Source')\n",
