Fixed nonrandom errors title and description

--- a/course/Notebook/Coursework.ipynb
+++ b/course/Notebook/Coursework.ipynb
@@ -571,7 +571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Errors forecasting\n",
+    "## Nonrandom errors\n",
     "\n",
     "Trend line may cover not all relations between time and value\n",
     "and a part of relations will occur in errors (difference between trend and data)\n",
@@ -586,7 +586,7 @@
     "$$\n",
     "where $e$ is a real noise and $\\delta$ is a part which depends on previous observations linearly\n",
     "$$\n",
-    "\\delta_{t + \\tau} = a_0 + \\sum_{i = 1}^{\\tau - 1} \\delta_{t + i} \\cdot a_i\n",
+    "\\delta_{t + \\tau} = a_0 + \\sum_{i = 0}^{\\tau - 1} \\delta_{t + i} \\cdot a_{i + 1}\n",
     "$$"
    ]
   },
