Added F-test to bibliography

--- a/course/documentation/5_main/main.tex
+++ b/course/documentation/5_main/main.tex
@@ -117,7 +117,8 @@
 для якого відстань між розподілом помилок та нормальним розподілом
 була наймешною.
 Ця умова винонується для віконця шириною $7$,
-що відповідає $\alpha = \frac{1}{4}$
+що відповідає $\alpha = \frac{1}{4}$.
+Маємо похибку $\sigma = 16.3$.
 
 \begin{center}
 \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{Coursework_files/Coursework_24_0.png}
