--- a/course/documentation/bibliography.bib
+++ b/course/documentation/bibliography.bib
@@ -1,19 +1,18 @@
 @article{dago1990,
-  added-at = {2009-05-09T18:54:01.000+0200},
   author = {D'Agostino, Ralph B. and Belanger, Albert and D'Agostino, Jr.},
-  biburl = {http://www.bibsonomy.org/bibtex/2b8685b2fc22ffdc423838b7aaf7b5995/maverick},
-  description = {test normality},
-  interhash = {91ca82e534b9f760791dd1f30894d57e},
-  intrahash = {b8685b2fc22ffdc423838b7aaf7b5995},
-  issn = {00031305},
   journal = {The American Statistician},
-  keywords = {gof},
   number = 4,
   pages = {316--321},
   publisher = {American Statistical Association},
-  timestamp = {2009-05-09T18:56:30.000+0200},
   title = {A Suggestion for Using Powerful and Informative Tests of Normality},
-  url = {http://www.jstor.org/stable/2684359},
   volume = 44,
   year = 1990
+}
+@book{lomax2007statistical,
+  title={Statistical Concepts: A Second Course},
+  author={Lomax, R.G.},
+  isbn={9780805858501},
+  lccn={2007276470},
+  year={2007},
+  publisher={Lawrence Erlbaum Associates}
 }
