Moved time forecasting to separate file

--- a/course/documentation/5_main/main.tex
+++ b/course/documentation/5_main/main.tex
@@ -1,125 +1,2 @@
-\chapter{Прогнозування часових рядів}
-
-На вході дано часовий ряд $Y$ з шумом $E$
-\begin{equation*}
-  Y = Z + E,
-\end{equation*}
-де
-\begin{equation*}
-  cov(E_i, E_j) =
-    \begin{cases}
-      \sigma_e^2,& i = j, \\
-      0,&          i \neq j.
-    \end{cases}
-\end{equation*}
-Також наявні аномальні точки,
-які заважають процесу зглажування та прогнозування.
-
-\section{Видалення аномалій}
-
-Для початку побудуємо зглажування на основі експоненційно зваженого
-ковзкого середнього з $\alpha = \frac{1}{3}$,
-при якому довжина віконця дорівнює $6$.
-\begin{center}
-  \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{Coursework_files/Coursework_12_0.png}
-\end{center}
-
-Одразу видно, де знаходяться аномальні точки,
-проте треба застосувати метод,
-який ґрунтується на здоровому глузді
-та математичній статистиці.
-Оскільки аномальні точки заважають будувати лінію тренду,
-потрібно порівняти якість фільтрації при видаленні різних точок даного ряду.
-Введемо $Y_{fixed}\left( t \right)$ як ряд, в якому ``виправлено'' точку $t$.
-Це означає, що дані в цій точці мають значення, яке не є аномальним.
-Під якістю фільтрації розуміємо середньоквадратичне відхилення
-між лінією тренду та самим рядом.
-Порівняємо якість зглажування для $Y$
-з якістю зглажування його виправленого аналогу.
-Логічно, що можна порівняти їх співвідношення з певним граничним значенням
-\begin{equation*}
-  V\left( t \right)
-  = \frac{Var\left( Y - Y^{smoothed} \right)}
-         {Var\left( Y_{fixed}\left(t\right)
-                    - Y_{fixed}^{smoothed}\left(t\right) \right)}
-  > V_{critical}
-\end{equation*}
-Отримали вираз, що відомий як $F$-тест:
-маємо вибіркові дисперсії двох вибірок,
-що за умовою мають нормальний закон розподілення.
-Аномальні точки будемо знаходити одну за одною ---
-знаходити найгіршу та виправляти її,
-якщо вона дійсно аномальна
-\begin{equation*}
-  \max\limits_{t}{F_{F, T, T-1}\left( V\left( t \right) \right)}
-    > F_{F, T, T-1}^{critical}
-  \Longrightarrow
-  t_{anomaly} = \max\limits_{t}{F_{F, T, T-1}\left( V\left( t \right) \right)}.
-\end{equation*}
-Поглянемо на те, як змінюється вибіркова дисперсія помилки
-при відкиданні кожної точки.
-\begin{center}
-\adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{Coursework_files/Coursework_15_0.png}
-\end{center}
-
-З рисунку видно піки саме в тих місцях,
-де передбачалась наявнисть аномальних точок.
-Проте зараз в нас є міра їх ``аномальності''
-у вигляді ваги хвостів розподілу Фішера.
-\begin{center}
-\adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{Coursework_files/Coursework_17_0.png}
-\end{center}
-
-Відкидаємо одну за одною точки, при яких дисперсія значно змінюється,
-а саме такі, що з ймовірністю $0.9$ це дисперсія іншої виборки.
-
-\begin{center}
-\adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{Coursework_files/Coursework_17_0.png}
-\end{center}
-
-\begin{center}
-\adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{Coursework_files/Coursework_18_0.png}
-\end{center}
-
-\begin{center}
-\adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{Coursework_files/Coursework_18_1.png}
-\end{center}
-
-\begin{center}
-\adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{Coursework_files/Coursework_18_2.png}
-\end{center}
-
-Аномальні дані знаходилися в точках $2$, $12$ і $4$.
-Їх було виправлено за принципом найближчих сусідів ---
-середнє арифметичне найближчих точок.
-Маємо графік з даними без аномалій та зглажуванням,
-яке тепер значно краще описує ряд
-
-\begin{center}
-\adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{Coursework_files/Coursework_21_0.png}
-\end{center}
-
-\section{Вибір правильного зглажуючого віконця}
-
-Для подальших обчислень потрібно обрати коректні параметри зглажування,
-а саме параметр $\alpha$ для експоненційно зглаженого ковзкого середнього.
-Зазвичай це робиться в залежності від природи даних ---
-їх циклічності або характерного часу зміни.
-Цієї інформації немає, проте ми знаємо, що помилки мають гаусовий розподіл.
-Скористуємося відомим методом
-для визначення ``нормальності'' розподілу виборки ---
-методом Д'Ауґустіно Ральфа \cite{dago1990}.
-Цей тест на виході дає відстань розподілу даної виборки
-до класу нормально розподілених виборок.
-Ми хочемо обрати таке зглажування,
-щоб розподіл помилок був якомого більш гаусовим.
-Потрібно обрати таке $\alpha$,
-для якого відстань між розподілом помилок та нормальним розподілом
-була наймешною.
-Ця умова винонується для віконця шириною $7$,
-що відповідає $\alpha = \frac{1}{4}$.
-Маємо похибку $\sigma = 16.3$.
-
-\begin{center}
-\adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{Coursework_files/Coursework_24_0.png}
-\end{center}
+\import{5_main}{time_forecast.tex}
+\import{5_main}{dependency_forecast.tex}
