Added overfitting problem article to bibliography

--- a/course/documentation/bibliography.bib
+++ b/course/documentation/bibliography.bib
@@ -16,3 +16,13 @@
   year={2007},
   publisher={Lawrence Erlbaum Associates}
 }
+@article{overfitting,
+  title = "The Problem of Overfitting",
+  author = "Hawkins, {Douglas M.}",
+  year = "2004",
+  month = "1",
+  volume = "44",
+  pages = "1--12",
+  journal = "Journal of Chemical Information and Computer Sciences",
+  number = "1",
+}
