--- a/course/documentation/8_conclusion/main.tex
+++ b/course/documentation/8_conclusion/main.tex
@@ -23,8 +23,10 @@
   \item регресійна модель знайшла залежності, яких немає,
     але які допомагають покращити якість фільтрації,
     що також відомо як занадто точна регресія (overfitting);
+    \cite{overfitting}
+  \item обрано некоректні регресори;
   \item дані методи не підходять для цих даних.
-\end{enumerate}<++>
+\end{enumerate}
 
 \begin{center}
 \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{Coursework3_files/Coursework3_8_0.png}
