--- a/course/documentation/4_preface/preface.tex
+++ b/course/documentation/4_preface/preface.tex
@@ -1,20 +1,21 @@
 \chapter*{Вступ}
 \addcontentsline{toc}{chapter}{Вступ}
 
-\textbf{Актуальність роботи.}
+\textit{Об’єкт дослідження} --- часові ряди та методи їх прогнозування.
 
-\textit{Об’єкт дослідження} ---
+\textit{Предмет дослідження} --- якість прогнозування часових рядів
+різними методами.
 
-\textit{Предмет дослідження} ---
-
-\textbf{Мета дослідження.}
-
-Завдання наступні:
+Завдання:
 \begin{enumerate}
   \item
-    Вивчити;
+    зробити прогноз часового ряду на основі ретроданих;
   \item
-    Розробити.
+    зробити прогноз часового ряду на основі інших рядів,
+    від яких він залежить;
+  \item
+    порівняти ці два підходи.
 \end{enumerate}
-
-\textbf{Практичне значення одержаних результатів.}
+Обов'язкове використання методу експоненційного зглажування
+для побудови тренду часових рядів
+та методу авторегресії для оцінки невипадкових помилок.
